--- a/myapp/src/components/Resources/css/styles0.css
+++ b/myapp/src/components/Resources/css/styles0.css
@@ -799,6 +799,10 @@ fieldset {
 }
 @media(max-width:767px)
 {
+    #contact{
+      width:auto;
+      margin-right:100px;
+    }
     #image{
         height:30px;
         width:30px;
