--- a/myapp/src/components/Resources/css/styles.css
+++ b/myapp/src/components/Resources/css/styles.css
@@ -268,8 +268,8 @@
 }
 .img_flow{
   margin: 50px;
-  height:200px;
-  width:auto;
+  height:300px;
+  width:500px;
 }
 
 .names{
@@ -293,6 +293,15 @@
   margin:20px;
   width:150px;
   border-radius: 50%;
+}
+
+
+@media(max-width:760px){
+  .img_flow{
+    margin-right: 100px;
+    height:150px;
+    width:200px;
+  }
 }
 
 
@@ -328,16 +337,27 @@
                   
                   .nav-link{
                     color:#adadad;
-                  
+                    
                     margin:0 20px;
                   
                   }
                   .nav-link:hover{
                     color:#828282;
                   }
-              
+                  .dropdown-item .nav-link-drop{
+                    font-family: 'Times New Roman', Times, serif;
+                    text-decoration: none;
+                    color:black;
+                    font-size: 15px;
+                    transition: all 0.5s ease;
+                  }
                   
                   
+                  .dropdown-item:hover .nav-link-drop:hover{
+                    text-decoration: none;
+                    color: white;
+                    background:black;
+                  }
                   .navbar_head{
                     border-radius: 0%;
                     box-shadow:2px 2px 5px #828282;
@@ -852,6 +872,10 @@ fieldset {
 }
 @media(max-width:767px)
 {
+  #contact{
+    width:auto;
+    margin-right:100px;
+  }
     #image{
         height:30px;
         width:30px;
@@ -1136,18 +1160,18 @@ fieldset {
   background: #68bacd;
 }
 
-.footer {
+.foot {
   padding: 30px;
   padding-top: 60px;
 }
 
-.footer .copyright {
+.foot .copyright {
   line-height: 1.6;
   color: #545E6C;
   font-size: 13px;
 }
 
-.footer .fa-heart {
+.foot .fa-heart {
   color: #fb866a;
 }
 
@@ -1391,7 +1415,7 @@ section:last-child {
 	}
 }
 @media print {
-  #header, #footer { display: none !important; }
+  header, footer { display: none !important; }
   @page { margin: 0; }
   body { margin: 1.6cm; }
   #cv {
